--- a/_posts/2020/2020-01-01-2019-in-rear-window.md
+++ b/_posts/2020/2020-01-01-2019-in-rear-window.md
@@ -71,3 +71,6 @@ Say No to things I am not interested;
 1. Keep working hard and reflection always. 
 <div> 
 <div>Cheers! 
+
+
+![Figure 1](https://github.com/changliao/changliao.github.io/blob/main/_figure/numpy3d.png?raw=true)
