--- a/_posts/2020/2020-09-16-test-ride.md
+++ b/_posts/2020/2020-09-16-test-ride.md
@@ -11,12 +11,6 @@ blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-83312926472902280
 blogger_orig_url: https://life.changliao.us/2020/09/test-ride.html
 ---
 
-<p></p><div class="separator" style="clear: both; text-align: left;">Getting a 
-bike has been tough recently. But we managed to ride out once we find time and 
-gears.<div class="separator" style="clear: both; text-align: left;"> 
-<div class="separator" style="clear: both; text-align: center;">[<img 
-border="0" data-original-height="1374" data-original-width="1030" height="506" 
-src="https://1.bp.blogspot.com/-E1Fr52aCw1Q/X2KMIwnK_TI/AAAAAAAA_n4/kEsc8RoJZIIOw--3xluNtt0y1EOHvFnYQCLcBGAsYHQ/w379-h506/ride.jpg" 
-width="379" 
-/>](https://1.bp.blogspot.com/-E1Fr52aCw1Q/X2KMIwnK_TI/AAAAAAAA_n4/kEsc8RoJZIIOw--3xluNtt0y1EOHvFnYQCLcBGAsYHQ/s1374/ride.jpg) 
- <p></p> 
+Getting a bike has been tough recently. But we managed to ride out once we find time and gears.
+
+![Figure 1](https://github.com/changliao/changliao.github.io/blob/main/_figure/bike_ride_2019.png?raw=true)
