--- a/_posts/2020/2020-09-16-test-ride.md
+++ b/_posts/2020/2020-09-16-test-ride.md
@@ -13,4 +13,4 @@ blogger_orig_url: https://life.changliao.us/2020/09/test-ride.html
 
 Getting a bike has been tough recently. But we managed to ride out once we find time and gears.
 
-![Figure 1](https://github.com/changliao/changliao.github.io/blob/main/_figure/bike_ride_2019.png?raw=true)
+![Figure 1](https://github.com/changliao/life/blob/main/_figure/bike_ride_2019.png?raw=true)
