--- a/_posts/2020/2020-09-16-test-ride.md
+++ b/_posts/2020/2020-09-16-test-ride.md
@@ -6,11 +6,8 @@ author: Chang Liao
 tags:
 - Biking
 modified_time: '2020-09-16T15:07:09.675-07:00'
-thumbnail: https://1.bp.blogspot.com/-E1Fr52aCw1Q/X2KMIwnK_TI/AAAAAAAA_n4/kEsc8RoJZIIOw--3xluNtt0y1EOHvFnYQCLcBGAsYHQ/s72-w379-c-h506/ride.jpg
-blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-8331292647290228073
-blogger_orig_url: https://life.changliao.us/2020/09/test-ride.html
 ---
 
 Getting a bike has been tough recently. But we managed to ride out once we find time and gears.
 
-![Figure 1](https://github.com/changliao/life/blob/main/_figure/bike_ride_2019.png?raw=true)
+![Figure 1](https://changliao.github.com/io/life/blob/main/_figure/bike_ride_2019.png?raw=true)
