--- a/_posts/2020/2020-09-16-test-ride.md
+++ b/_posts/2020/2020-09-16-test-ride.md
@@ -10,4 +10,4 @@ modified_time: '2020-09-16T15:07:09.675-07:00'
 
 Getting a bike has been tough recently. But we managed to ride out once we find time and gears.
 
-![Figure 1](https://changliao.github.com/io/life/blob/main/_figure/bike_ride_2019.png?raw=true)
+![Figure 1](https://changliao.github.com.io/life/blob/main/_figure/bike_ride_2019.png?raw=true)
