--- a/_posts/2020/2020-08-18-lava-walk.md
+++ b/_posts/2020/2020-08-18-lava-walk.md
@@ -10,23 +10,7 @@ blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-39836377635511724
 blogger_orig_url: https://life.changliao.us/2020/08/lava-walk.html
 ---
 
-Spent one day hiking at the Vent tail, which is 30 miles west of Idaho 
-Falls.<div>Very unique lave landscape, the temperature is high, not too much 
-soil, and they are many cracks in the formation.<div> 
-<div class="separator" style="clear: both; text-align: center;">[<img 
-border="0" data-original-height="4032" data-original-width="3024" height="640" 
-src="https://1.bp.blogspot.com/-8md4Xkk3jPs/XzvyfEQyg9I/AAAAAAAA_S4/o5wn2x0A6nQCE96SXxNVrbAM3iQSw4uOgCPcBGAsYHg/s640/IMG_1130.HEIC" 
-/>](https://1.bp.blogspot.com/-8md4Xkk3jPs/XzvyfEQyg9I/AAAAAAAA_S4/o5wn2x0A6nQCE96SXxNVrbAM3iQSw4uOgCPcBGAsYHg/s4032/IMG_1130.HEIC) 
-<div class="separator" style="clear: both; text-align: center;">[<img 
-border="0" data-original-height="3024" data-original-width="4032" 
-src="https://1.bp.blogspot.com/-cy5UZP-hpTA/XzvyfGEJsAI/AAAAAAAA_S4/_KTCGun2MPI2apMvhtKdBGbxZYV3NDcLACPcBGAsYHg/s640/IMG_1129.HEIC" 
-width="640" 
-/>](https://1.bp.blogspot.com/-cy5UZP-hpTA/XzvyfGEJsAI/AAAAAAAA_S4/_KTCGun2MPI2apMvhtKdBGbxZYV3NDcLACPcBGAsYHg/s4032/IMG_1129.HEIC) 
-<div class="separator" style="clear: both; text-align: center;">[<img 
-border="0" data-original-height="4032" data-original-width="3024" height="640" 
-src="https://1.bp.blogspot.com/-Q5VW5vnxLL0/XzvyfMEQIsI/AAAAAAAA_S4/7Ef9vbs-_9ILm7fR1mLux0-eWpxfB98WQCPcBGAsYHg/s640/IMG_1119.HEIC" 
-/>](https://1.bp.blogspot.com/-Q5VW5vnxLL0/XzvyfMEQIsI/AAAAAAAA_S4/7Ef9vbs-_9ILm7fR1mLux0-eWpxfB98WQCPcBGAsYHg/s4032/IMG_1119.HEIC) 
-<div class="separator" style="clear: both; text-align: center;">[<img 
-border="0" data-original-height="4032" data-original-width="3024" height="640" 
-src="https://1.bp.blogspot.com/-DnlGv4kSzUk/XzvyfMpIcsI/AAAAAAAA_S4/Le56TQcH2DYMuRxBAskVFQwt5oRMfB0kACPcBGAsYHg/s640/IMG_1132.HEIC" 
-/>](https://1.bp.blogspot.com/-DnlGv4kSzUk/XzvyfMpIcsI/AAAAAAAA_S4/Le56TQcH2DYMuRxBAskVFQwt5oRMfB0kACPcBGAsYHg/s4032/IMG_1132.HEIC)<div> 
+Spent one day hiking at the Vent tail, which is 30 miles west of Idaho Falls.
+Very unique lave landscape, the temperature is high, not too much soil, and they are many cracks in the formation.
+
+![Figure 1](https://github.com/changliao/life/blob/main/_figure/2020/lava_walk.jpg?raw=true)
