--- a/_posts/2019/2019-12-09-blog-post.md
+++ b/_posts/2019/2019-12-09-blog-post.md
@@ -9,45 +9,22 @@ blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-38158521609570545
 blogger_orig_url: https://life.changliao.us/2019/12/blog-post.html
 ---
 
-<span style="color: #263238; font-family: &quot;roboto&quot; , 
-&quot;arial&quot; , sans-serif; font-size: 
-13px;">今天是一个特殊的日子，因为我的妻子通过博士答辩，成为了一位博士。 
-<span style="color: #263238; font-family: &quot;roboto&quot; , 
-&quot;arial&quot; , sans-serif; font-size: 
-13px;">晚上和母亲打电话，说到以前求学的困难，不禁回头想想一路走来的艰辛。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">可能并不是每一个人都十分清楚为什么要读博士，因为很多人其实并不知道自己想要什么，追求什么。但是他们中的一些人不管怎么样，坚持了下来，在自己的学科领域又一次前进了一小步。就是这么小小的一步，却是人类知识进步的一个点滴。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">而只有亲身经历这个一小步的人，才会体验到这其中的艰辛，也才能体会到最后的喜悦。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">研究生的工作和本科生的工作其实差别很大，我想这也是为什么中国的本科很出色，但是研究生却并不领先世界其他国家。因为研究性学习需要很多本科阶段无法考验的能力，比如耐心和持久。我妻子从硕士期间就开始从事混凝土腐蚀相关的研究一直到现在接近五年多的时间，虽然每一个研究的侧重点不一样，但是她却是在这一个领域不断深度挖掘。以前在印第安纳普渡大学的时候，我记得她主要做一些混凝土在其他气体和微生物环境下的腐蚀，后来在南卡克莱门森大学开始做金属腐蚀，后来甚至于用到了显微镜观察混凝土结构在腐蚀情况下的变化。我就知道她已经做的比较深入了。最为关键的是做这些研究的想法很多时候并不来源于导师，因为很多时候导师并不了解其中的原理和困难。如果没有对一门学科领域的热爱和专研精神，她是很难一直走下去的。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">我从来没有见过一个女生在混凝土实验室握着电锯切割笨重的水泥样品的；而且我也没有见过一个女生要在污水处理厂安置混凝土样品。从这些方面来讲，为了研究，她可以克服任何困难，而且是坚持了五年。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">想起自己以前做博士论文的时候，也是遇到了很多困难。甚至很多人奉劝我不要做太难的课题，因为风险很高，后来我来到西北太平洋国家实验室才明白这属于Risk 
-management，因为一个太难的课题在有限的资源和智力下有可能是无法完成的。但是我后来坚持了下来，一个项目做了三年，终于完成了初步成果。而且这个成果有可能会用到我今后的其他研究中去。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">现在回头想想，博士确实是人生的炼金石。能够经历博士的考验，就不存在什么难题是我们今后的生活无法克服的。博士期间在经济上是贫困的，这个无需多说。博士期间很多时候是孤独的，因为你在的你研究领域很可能是独自一人，没有人可以给你完整的帮助，但是你需要集百家之长，最后运用到自己的难题上来。这个不像是一门课，不会有其他同学和你一样收到同样的练习题。好的是你依旧可以收获鼓励，来自朋友，来自家人。在我们的博士期间，我和妻子互相鼓励。她是保守派，我是乐观派，所以我鼓励她比较多。但是她做的其实比我出色。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">博士不是终点，而是又一个起点，是一个肯定研究方法的起点。从这一刻起，我们可以将我们的研究方法应用到任何领域，解决任何问题。 
-<br style="color: #263238; font-family: Roboto, Arial, sans-serif; font-size: 
-13px; outline: none;" /><span style="color: #263238; font-family: 
-&quot;roboto&quot; , &quot;arial&quot; , sans-serif; font-size: 
-13px;">很遗憾我没能参加妻子的答辩，但是我还是会她一起庆祝，并且参加她的毕业典礼。 
-<span style="color: #263238; font-family: &quot;roboto&quot; , 
-&quot;arial&quot; , sans-serif; font-size: 
-13px;">很高兴我们在人生最艰难也是最有成就感的时刻能够分享对方的生活。我也相信她将来会一切顺利，成为她的领域的佼佼者。 
+今天是一个特殊的日子，因为我的妻子通过博士答辩，成为了一位博士。
+晚上和母亲打电话，说到以前求学的困难，不禁回头想想一路走来的艰辛。
+
+可能并不是每一个人都十分清楚为什么要读博士，因为很多人其实并不知道自己想要什么，追求什么。但是他们中的一些人不管怎么样，坚持了下来，在自己的学科领域又一次前进了一小步。就是这么小小的一步，却是人类知识进步的一个点滴。
+
+而只有亲身经历这个一小步的人，才会体验到这其中的艰辛，也才能体会到最后的喜悦。
+
+研究生的工作和本科生的工作其实差别很大，我想这也是为什么中国的本科很出色，但是研究生却并不领先世界其他国家。因为研究性学习需要很多本科阶段无法考验的能力，比如耐心和持久。我妻子从硕士期间就开始从事混凝土腐蚀相关的研究一直到现在接近五年多的时间，虽然每一个研究的侧重点不一样，但是她却是在这一个领域不断深度挖掘。以前在印第安纳普渡大学的时候，我记得她主要做一些混凝土在其他气体和微生物环境下的腐蚀，后来在南卡克莱门森大学开始做金属腐蚀，后来甚至于用到了显微镜观察混凝土结构在腐蚀情况下的变化。我就知道她已经做的比较深入了。最为关键的是做这些研究的想法很多时候并不来源于导师，因为很多时候导师并不了解其中的原理和困难。如果没有对一门学科领域的热爱和专研精神，她是很难一直走下去的。
+
+我从来没有见过一个女生在混凝土实验室握着电锯切割笨重的水泥样品的；而且我也没有见过一个女生要在污水处理厂安置混凝土样品。从这些方面来讲，为了研究，她可以克服任何困难，而且是坚持了五年。
+
+想起自己以前做博士论文的时候，也是遇到了很多困难。甚至很多人奉劝我不要做太难的课题，因为风险很高，后来我来到西北太平洋国家实验室才明白这属于Risk management，因为一个太难的课题在有限的资源和智力下有可能是无法完成的。但是我后来坚持了下来，一个项目做了三年，终于完成了初步成果。而且这个成果有可能会用到我今后的其他研究中去。
+
+现在回头想想，博士确实是人生的炼金石。能够经历博士的考验，就不存在什么难题是我们今后的生活无法克服的。博士期间在经济上是贫困的，这个无需多说。博士期间很多时候是孤独的，因为你在的你研究领域很可能是独自一人，没有人可以给你完整的帮助，但是你需要集百家之长，最后运用到自己的难题上来。这个不像是一门课，不会有其他同学和你一样收到同样的练习题。好的是你依旧可以收获鼓励，来自朋友，来自家人。在我们的博士期间，我和妻子互相鼓励。她是保守派，我是乐观派，所以我鼓励她比较多。但是她做的其实比我出色。
+
+博士不是终点，而是又一个起点，是一个肯定研究方法的起点。从这一刻起，我们可以将我们的研究方法应用到任何领域，解决任何问题。
+
+很遗憾我没能参加妻子的答辩，但是我还是会她一起庆祝，并且参加她的毕业典礼。
+很高兴我们在人生最艰难也是最有成就感的时刻能够分享对方的生活。我也相信她将来会一切顺利，成为她的领域的佼佼者。
