--- a/_posts/2020/2020-05-17-nesting.md
+++ b/_posts/2020/2020-05-17-nesting.md
@@ -10,11 +10,6 @@ blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-76730228171702728
 blogger_orig_url: https://life.changliao.us/2020/05/nesting.html
 ---
 
-<div class="separator" style="clear: both; text-align: left;">Someone is 
-building a house.<div class="separator" style="clear: both; text-align: 
-left;"> 
+Someone is building a house.
 
-<div class="separator" style="clear: both; text-align: center;">[<img 
-border="0" data-original-height="4032" data-original-width="3024" height="320" 
-src="https://1.bp.blogspot.com/-ns1wDsNT38U/XsF7x4ZdhkI/AAAAAAAA9oo/gQ4-vAWGJkwtqpmrRf33og5lzVth8yXdwCK4BGAsYHg/s320/IMG_0919.HEIC" 
-/>](https://1.bp.blogspot.com/-ns1wDsNT38U/XsF7x4ZdhkI/AAAAAAAA9oo/gQ4-vAWGJkwtqpmrRf33og5lzVth8yXdwCK4BGAsYHg/IMG_0919.HEIC) 
+![Figure 1](https://github.com/changliao/life/blob/main/_figure/2020/nesting.jpg?raw=true)
