--- a/_posts/2019/2019-12-09-exercise.md
+++ b/_posts/2019/2019-12-09-exercise.md
@@ -2,11 +2,12 @@
 layout: post
 title: 锻炼那点事
 date: '2019-12-09T22:12:00.002-08:00'
+permalink: /posts/2019/12/09/exercise/
+excerpt: 冬天到了，意味着去健身房的机会越来越少。
 author: Chang Liao
 tags:
 modified_time: '2019-12-09T22:12:26.360-08:00'
-blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-1302997266611467367
-blogger_orig_url: https://life.changliao.us/2019/12/blog-post_9.html
+
 ---
 
 
