--- a/_posts/2019/2019-12-09-phd.md
+++ b/_posts/2019/2019-12-09-phd.md
@@ -2,6 +2,8 @@
 layout: post
 title: 妻子博士答辩
 date: '2019-12-09T22:08:00.000-08:00'
+permalink: /posts/2019/12/09/phd/
+excerpt: 博士不是终点，而是又一个起点
 author: Chang Liao
 tags:
 modified_time: '2019-12-09T22:08:52.076-08:00'
