--- a/_posts/2019/2019-12-09-fishing.md
+++ b/_posts/2019/2019-12-09-fishing.md
@@ -2,11 +2,12 @@
 layout: post
 title: I showed up fish did not
 date: '2019-12-09T22:09:00.000-08:00'
+permalink: /posts/2019/12/09/fishing/
+excerpt: I showed up, fish did not
 author: Chang Liao
 tags:
 modified_time: '2019-12-09T22:09:26.039-08:00'
-blogger_id: tag:blogger.com,1999:blog-3538903673553692702.post-7409675743198888153
-blogger_orig_url: https://life.changliao.us/2019/12/i-showed-up-fish-did-not.html
+
 ---
 
 标题可以这么翻译：我和鱼有个预约，我出现了，可是鱼没有。（这是一个悲剧故事）
